<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">3omlety</string>
    <!-- <string name="action_settings">Settings</string>-->
    <string name="convert_to_text_view">To:</string>
    <string name="convert_from_text_view">From:</string>
    <string name="enter_amount_hint">Enter the amount</string>
    <string name="to_text_view">00.00=00.00</string>
    <string name="data_source_text_view">Data Source:</string>
    <string name="update_time">Updated Time: </string>
    <string name="title_activity_gold_currency">GoldCurrency</string>
    <string name="title_activity_currency_converter">CurrencyConverter</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_currency">Currency</string>
    <string name="title_activity_detail_bank">DetailBankActivity</string>
    <string name="title_activity_det_scrolling">DetScrollingActivity</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="title_about_us">About Us</string>
    <string name="title_rate_us">Rate me</string>
    <string name="banner_ad_unit_id">ca-app-pub-9811511775087346/6550235482</string>
    <string name="banner_ad_unit_id2">ca-app-pub-9811511775087346/7579465872</string>
    <string name="banner_ad_unit_id3">ca-app-pub-8135243106946359/7053971821</string>


        <!-- Menu label to fetch updated weather info from the server -->
        <string name="action_refresh" translatable="false">Refresh</string>
        <string name="title_activity_detail">Details</string>
        <string name="title_activity_settings">Settings</string>

        <!-- Label for the location preference [CHAR LIMIT=30] -->
        <string name="pref_location_label">Location</string>

        <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_location_key" translatable="false">location</string>

        <!-- Key name for storing location status in SharedPreferences -->
        <string name="pref_location_status_key" translatable="false">loc-status</string>

        <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
        <string name="pref_location_default" translatable="false">94043</string>

        <!-- Strings used when displaying the state of the Location in settings -->
        <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
        <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

        <!-- Strings related to Notification Enabled preference -->
        <string name="pref_enable_notifications_label">Weather Notifications</string>

        <string name="pref_enable_notifications_true">Enabled</string>
        <string name="pref_enable_notifications_false">Not Enabled</string>
        <string name="pref_enable_notifications_default" translatable="false">true</string>

        <!-- Strings for formatting weather-related data -->

        <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
        <string name="pref_units_label">Temperature Units</string>

        <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
        <string name="pref_units_label_metric">Metric</string>

        <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
        <string name="pref_units_label_imperial">Imperial</string>

        <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_units_key" translatable="false">units</string>

        <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
        <string name="pref_units_metric" translatable="false">metric</string>

        <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
        <string name="pref_units_imperial" translatable="false">imperial</string>


        <!-- Language-specific constants -->
        <string name="today">Today</string>

        <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
        <string name="tomorrow">Tomorrow</string>

        <!-- Date format [CHAR LIMIT=NONE] -->
        <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

        <!-- Strings for formatting weather-related data -->
        <!-- Temperature format [CHAR LIMIT=5 -->
        <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

        <!-- Windspeed formats -->
        <!-- Wind in mph [CHAR LIMIT=25] -->
        <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
        <!-- Wind in kph [CHAR LIMIT=25] -->
        <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

        <!-- Pressure format CHAR LIMIT=25] -->
        <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

        <!-- Humidity format CHAR LIMIT=25]-->
        <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

        <!-- SyncAdapter related -->
        <string name="sync_account_type">sunshine.example.com</string>
        <string name="content_authority">com.example.essam.sunshine</string>

        <!-- Notification Format -->
        <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

        <!-- Strings related to Notification preference -->
        <string name="pref_last_notification">last_notification</string>

        <!-- Empty Weather Database -->
        <string name="empty_forecast_list">No Weather Information Available</string>
        <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
        <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
        <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
        <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>


        <!-- A11y -->
        <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
        <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
        <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
        <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>


        <!-- Weather Conditions -->
        <string name="condition_2xx">Storm</string>
        <string name="condition_3xx">Drizzle</string>
        <string name="condition_500">Light Rain</string>
        <string name="condition_501">Moderate Rain</string>
        <string name="condition_502">Heavy Rain</string>
        <string name="condition_503">Intense Rain</string>
        <string name="condition_504">Extreme Rain</string>
        <string name="condition_511">Freezing Rain</string>
        <string name="condition_520">Light Shower</string>
        <string name="condition_521">Shower</string>
        <string name="condition_522">Heavy Shower</string>
        <string name="condition_531">Ragged Shower</string>
        <string name="condition_600">Light Snow</string>
        <string name="condition_601">Snow</string>
        <string name="condition_602">Heavy Snow</string>
        <string name="condition_611">Sleet</string>
        <string name="condition_612">Shower Sleet</string>
        <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
        <string name="condition_616">Rain and Snow</string>
        <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
        <string name="condition_621">Shower Snow</string>
        <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
        <string name="condition_701">Mist</string>
        <string name="condition_711">Smoke</string>
        <string name="condition_721">Haze</string>
        <string name="condition_731">Sand, Dust</string>
        <string name="condition_741">Fog</string>
        <string name="condition_751">Sand</string>
        <string name="condition_761">Dust</string>
        <string name="condition_762">Volcanic Ash</string>
        <string name="condition_771">Squalls</string>
        <string name="condition_781">Tornado</string>
        <string name="condition_800">Clear</string>
        <string name="condition_801">Mostly Clear</string>
        <string name="condition_802">Scattered Clouds</string>
        <string name="condition_803">Broken Clouds</string>
        <string name="condition_804">Overcast Clouds</string>
        <string name="condition_900">Tornado</string>
        <string name="condition_901">Tropical Storm</string>
        <string name="condition_902">Hurricane</string>
        <string name="condition_903">Cold</string>
        <string name="condition_904">Hot</string>
        <string name="condition_905">Windy</string>
        <string name="condition_906">Hail</string>
        <string name="condition_951">Calm</string>
        <string name="condition_952">Light Breeze</string>
        <string name="condition_953">Gentle Breeze</string>
        <string name="condition_954">Breeze</string> <!-- moderate breeze -->
        <string name="condition_955">Fresh Breeze</string>
        <string name="condition_956">Strong Breeze</string>
        <string name="condition_957">High Wind</string>
        <string name="condition_958">Gale</string>
        <string name="condition_959">Severe Gale</string>
        <string name="condition_960">Storm</string>
        <string name="condition_961">Violent Storm</string>
        <string name="condition_962">Hurricane</string>

        <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>
    <string name="info_copyright">\@ Essam Ebn Hazem</string>


</resources>

